--- a/scss/sections/_about.scss
+++ b/scss/sections/_about.scss
@@ -10,6 +10,9 @@
     }
     background-color: #141414;
     border-bottom: 3px solid #f39c12;
+    .about-title {
+      padding: 0px 60px;
+    }
 }
 
 .about-content {
