--- a/scss/sections/_examples.scss
+++ b/scss/sections/_examples.scss
@@ -10,6 +10,9 @@
     }
     background-color: #141414;
     border-bottom: 3px solid #f39c12;
+    .examples-title {
+      padding: 0px 60px;
+    }
 }
 
 .content-container {
