--- a/scss/sections/_hero.scss
+++ b/scss/sections/_hero.scss
@@ -15,6 +15,7 @@ body {
 
 .hero-image {
     position: relative;
+    padding-top: 60px;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -26,6 +27,7 @@ body {
     background-position: center;
     .overlay {
         position:absolute;
+        top: 0;
         background-color: black;
         opacity: 0.5;
         width: 100%;
