--- a/scss/sections/_scs.scss
+++ b/scss/sections/_scs.scss
@@ -10,6 +10,9 @@
   }
   background-color: #141414;
   border-bottom: 3px solid #f39c12;
+  .scs-title {
+    padding: 0px 60px;
+  }
 }
 
 .scs-content {
