--- a/scss/sections/_sidebar.scss
+++ b/scss/sections/_sidebar.scss
@@ -12,13 +12,13 @@ main {
 
 .menu-btn {
     display: none;
-    position: fixed;
+    position: absolute;
     z-index: 10;
     display: none;
     justify-content: center;
     align-items: center;
-    margin-top: 20px;
-    margin-left: 20px;
+    margin-top: 10px;
+    margin-left: 10px;
     border-radius: 3px;
     min-width: 63px;
     height: 56px;
